# cuteTHiepy

./: C8E5_25C_20RHsteps_beforeready_result.xlsx  LICENSE  Python_check.bat  README.md  digitizer.py  filename_result.xlsx  gdp_data.txt  plots.py  pyproject.toml  shellcommands.bat  shellcommands2.bat  test.py  test_pyperclip.py
ExcelSheet/: MatPlotLib.xlsb  Plot.bat  Werte.xlsx  capture.png.traj.csv  csvplot.py  file.xlsx  result.csv
cuteTHiepy/: DVS_read.py  plots.py
